--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@openzeppelin/contracts": "^3.2.0",
     "@uniswap/lib": "^1.1.2",
     "@uniswap/v2-core": "^1.0.1",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0"
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "truffle": "^5.1.25"
   },
   "devDependencies": {
-    "@openzeppelin/test-environment": "^0.1.6",
+    "@openzeppelin/test-environment": "^0.1.7",
     "@openzeppelin/test-helpers": "^0.5.4",
     "chai": "^4.2.0",
     "mocha": "^7.0.0",
