--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@openzeppelin/test-helpers": "^0.5.4",
     "chai": "^4.2.0",
     "mocha": "^7.0.0",
+    "solidity-coverage": "^0.7.13",
     "truffle-plugin-verify": "^0.4.0",
     "truffle-privatekey-provider": "^1.3.0"
   }
