--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "mocha --timeout 10000 --exit --retries 10 --recursive $1",
     "testAll": "mocha --timeout 10000 --exit --retries 10 --recursive test",
     "deploy": "truffle migrate --network mainnet",
+    "deploy-ropsten": "truffle migrate --network ropsten",
     "verify": "truffle run verify Implementation --network mainnet",
     "abis": "node scripts/abis.js"
   },
@@ -32,6 +33,6 @@
     "mocha": "^7.0.0",
     "solidity-coverage": "^0.7.13",
     "truffle-plugin-verify": "^0.4.0",
-    "truffle-privatekey-provider": "^1.3.0"
+    "truffle-privatekey-provider": "^1.5.0"
   }
 }
