--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.2.1",
+    "synthetix": "^2.39.1",
     "truffle": "^5.1.25"
   },
   "devDependencies": {
