--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uniswap/lib": "^1.1.2",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "chai-bn": "^0.2.1",
     "dotenv": "^8.2.0",
     "ethereum-waffle": "^3.2.1",
     "truffle": "^5.1.25"
