--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@openzeppelin/contracts": "^3.2.0",
+    "@truffle/hdwallet-provider": "^1.2.1",
     "@uniswap/lib": "^1.1.2",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
@@ -32,6 +33,6 @@
     "mocha": "^7.0.0",
     "solidity-coverage": "^0.7.13",
     "truffle-plugin-verify": "^0.4.0",
-    "truffle-privatekey-provider": "^1.3.0"
+    "truffle-privatekey-provider": "^1.5.0"
   }
 }
