build: configure solidity settings and gitignore

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "files": [],
   "scripts": {
-    "compile": "npx hardat compile",
+    "compile": "npx hardhat compile",
     "coverage": "scripts/coverage.js",
     "coverage:hardhat": "npx hardhat coverage",
     "console": "npx hardhat console",
