style: initialise eslint

--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
   "author": "joeysantoro",
   "license": "AGPL-3.0-only",
   "dependencies": {
-    "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@chainlink/contracts": "^0.1.7",
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@openzeppelin/cli": "^2.8.2",
     "@openzeppelin/contracts": "^4.1.0",
     "@truffle/hdwallet-provider": "^1.2.2",
-    "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-contract-sizer": "^2.0.3",
-    "solidity-coverage": "^0.7.16",
     "@uniswap/lib": "^1.1.2",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "hardhat-contract-sizer": "^2.0.3",
+    "hardhat-gas-reporter": "^1.0.4",
+    "solidity-coverage": "^0.7.16",
     "truffle": "^5.1.25"
   },
   "devDependencies": {
@@ -45,6 +45,7 @@
     "chai": "^4.3.4",
     "chai-bn": "^0.2.1",
     "dotenv": "^8.2.0",
+    "eslint": "^7.27.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.2.0",
     "hardhat": "^2.3.0",
