style: fine-tune eslint, declare globals injected by test env

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,11 @@
     "comma-dangle": 0,
     "func-names": 0,
     "space-before-function-paren": 0
+  },
+  "globals": {
+    "artifacts": "readonly",
+    "describe": "readonly",
+    "beforeEach": "readonly",
+    "it": "readonly"
   }
 }
