--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "chai-bn": "^0.2.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.2.0",
     "hardhat": "^2.3.0",
