--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "rm -rf build",
     "test": "npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
+    "lint:js": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js,.ts .",
     "size-contracts": "npx hardhat size-contracts",
     "deploy:localhost": "npx hardhat run --network localhost deploy/3_erc20.js",
     "deploy:ropsten": "npx hardhat run --network ropsten scripts/deploy/migrations.js",
