deps: update dependencies remove truffle move needed prod deps out of dev deps

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "rm -rf build",
     "test": "npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
-    "lint:js": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js,.ts .",
+    "lint:js": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js .",
     "size-contracts": "npx hardhat size-contracts",
     "deploy:localhost": "npx hardhat run --network localhost deploy/3_erc20.js",
     "deploy:ropsten": "npx hardhat run --network ropsten scripts/deploy/migrations.js",
@@ -24,6 +24,9 @@
   "author": "joeysantoro",
   "license": "AGPL-3.0-only",
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@chainlink/contracts": "^0.1.7",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@openzeppelin/contracts": "^4.1.0",
@@ -34,17 +37,14 @@
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.16",
+    "dotenv": "^8.2.0",
     "truffle": "^5.1.25"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/test-environment": "^0.1.7",
     "@openzeppelin/test-helpers": "^0.5.4",
     "chai": "^4.3.4",
     "chai-bn": "^0.2.1",
-    "dotenv": "^8.2.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
