--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,14 +17,10 @@
     "no-multi-spaces": 0,
     "no-trailing-spaces": 0,
     "object-curly-spacing": 0,
-    "quotes": 0,
-    "padded-blocks": 0,
-    "semi": 0,
-    "import/newline-after-import": 0,
-    "no-mixed-spaces-and-tabs": 0,
     "no-tabs": 0,
-    "indent": 0,
-    "eol-last": 0
+    "no-unused-expressions": 0,
+    "no-sequences": 0,
+    "no-mixed-spaces-and-tabs": 0
   },
   "globals": {
     "artifacts": "readonly",
