--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/test-helpers": "^0.5.4",
+    "@openzeppelin/test-environment": "^0.1.7",
     "@chainlink/contracts": "^0.1.7",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@openzeppelin/contracts": "^4.1.0",
@@ -38,11 +40,10 @@
     "hardhat-gas-reporter": "^1.0.4",
     "solidity-coverage": "^0.7.16",
     "dotenv": "^8.2.0",
-    "truffle": "^5.1.25"
+    "truffle": "^5.1.25",
+    "hardhat": "^2.3.0"
   },
   "devDependencies": {
-    "@openzeppelin/test-environment": "^0.1.7",
-    "@openzeppelin/test-helpers": "^0.5.4",
     "chai": "^4.3.4",
     "chai-bn": "^0.2.1",
     "eslint": "^7.27.0",
@@ -50,7 +51,6 @@
     "eslint-plugin-import": "^2.23.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.2.0",
-    "hardhat": "^2.3.0",
     "mocha": "^7.0.0",
     "truffle-plugin-verify": "^0.4.0",
     "truffle-privatekey-provider": "^1.5.0",
