create separate validation helper file

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,4 @@ MAINNET_ETH_PCV_ADAPTER=0xB72dDeD4Fa321e093E2083B596404A56ffC5b574
 MAINNET_PROPOSER=0xe0ac4559739bd36f0913fb0a3f5bfc19bcbacd52
 MAINNET_VOTER=0xB8f482539F2d3Ae2C9ea6076894df36D1f632775
 MAINNET_WETH=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2
+MAINNET_RARI_POOL_8=0xd8553552f8868C1Ef160eEdf031cF0BCf9686945
