--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,10 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "allowJs": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitThis": false,
     "target": "es2018",
     "module": "commonjs",
-    "strict": true,
     "esModuleInterop": true,
     "outDir": "dist"
   },
