--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "target": "es2018",
     "module": "commonjs",
     "esModuleInterop": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "resolveJsonModule": true,
   },
   "include": ["./src", "./test"],
   "files": ["hardhat.config.ts"]
