--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
     "test:e2e": "npx hardhat test",
-    "lint:js": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js .",
+    "lint": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js .",
+    "lint:fix": "npm run lint --fix",
     "size-contracts": "npx hardhat size-contracts",
     "deploy:localhost": "npx hardhat run --network localhost deploy/3_erc20.js",
     "deploy:ropsten": "npx hardhat run --network ropsten scripts/deploy/migrations.js",
