--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "console:ropsten": "npx hardhat console --network ropsten",
     "clean": "rm -rf build",
     "test": "npx hardhat test",
+    "test:e2e": "RUN_E2E_TESTS=true npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
-    "test:e2e": "npx hardhat test",
     "lint": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js .",
     "lint:fix": "npm run lint --fix",
     "size-contracts": "npx hardhat size-contracts",
