ci: add e2e tests into CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             - repo-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Run linter
-          command: npm run lint:js
+          command: npm run lint
   test:
     working_directory: ~/repo
     docker:
@@ -53,6 +53,18 @@ jobs:
           name: Run tests
           command: npm run test
 
+  e2e-test:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/node:12
+    steps:
+      - restore_cache:
+          keys:
+            - repo-{{ .Environment.CIRCLE_SHA1 }}
+      - run:
+          name: Run end-to-end tests
+          command: npm run test:e2e
+
 workflows:
   main:
     jobs:
@@ -63,3 +75,11 @@ workflows:
       - test:
           requires:
             - build
+      - e2e-test:
+          requires:
+            - build
+            - lint
+            - test
+          filters:
+            branches:
+              only: master
