--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/test-environment": "^0.1.7",
     "@openzeppelin/test-helpers": "^0.5.4",
-    "@truffle/hdwallet-provider": "^1.2.2",
     "@typechain/web3-v1": "^3.0.0",
     "@uniswap/lib": "^1.1.2",
     "@uniswap/v2-core": "^1.0.1",
@@ -44,8 +43,7 @@
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.5",
-    "solidity-coverage": "^0.7.16",
-    "truffle": "^5.1.25"
+    "solidity-coverage": "^0.7.16"
   },
   "devDependencies": {
     "@typechain/hardhat": "^2.0.2",
@@ -60,8 +58,6 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.2.0",
     "mocha": "^7.0.0",
-    "truffle-plugin-verify": "^0.4.0",
-    "truffle-privatekey-provider": "^1.5.0",
     "ts-node": "^10.0.0",
     "typechain": "^5.0.0",
     "typescript": "^4.3.2",
