--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,9 @@
     "no-await-in-loop": 0,
     "guard-for-in": 0,
     "no-restricted-syntax": 0,
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "no-unused-vars": 0,
+    "no-empty-function": 0
   },
   "globals": {
     "artifacts": "readonly",
