wip Compound DAO proposal

--- a/proposals/config.json
+++ b/proposals/config.json
@@ -11,5 +11,11 @@
         "exec" : false,
         "proposerAddress" : "",
         "voterAddress" : ""
+    },
+    "compoundPCVDeposit" : {
+        "deploy" : true,
+        "exec" : false,
+        "proposerAddress" : "",
+        "voterAddress" : ""
     }
 }
