add Kashi pairs

--- a/proposals/config.json
+++ b/proposals/config.json
@@ -5,6 +5,12 @@
         "proposerAddress" : "",
         "voterAddress" : ""
     },
+    "compoundPCVDeposit" : {
+        "deploy" : true,
+        "exec" : false,
+        "proposerAddress" : "",
+        "voterAddress" : ""
+    },
     "fip_13" : {
         "deploy" : true,
         "exec" : false,
