--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "AGPL-3.0-only",
   "dependencies": {
     "@chainlink/contracts": "^0.1.7",
+    "@ethersproject/strings": "^5.4.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
