add compound PCV deposit

--- a/proposals/config.json
+++ b/proposals/config.json
@@ -5,14 +5,8 @@
         "proposerAddress" : "",
         "voterAddress" : ""
     },
-    "compoundPCVDeposit" : {
-        "deploy" : true,
-        "exec" : false,
-        "proposerAddress" : "",
-        "voterAddress" : ""
-    },
     "indexOTC" : {
-        "deploy" : true,
+        "deploy" : false,
         "validate" : true,
         "exec" : false,
         "proposerAddress" : "",
