--- a/proposals/config.json
+++ b/proposals/config.json
@@ -12,5 +12,13 @@
         "proposerAddress" : "0xe0ac4559739bD36f0913FB0A3f5bFC19BCBaCD52",
         "voterAddress" : "0xB8f482539F2d3Ae2C9ea6076894df36D1f632775",
         "proposal_calldata" : ""
+    },
+    "fip_10a" : {
+        "deploy" : true,
+        "validate" : false,
+        "exec" : false,
+        "proposerAddress" : "0xe0ac4559739bD36f0913FB0A3f5bFC19BCBaCD52",
+        "voterAddress" : "0xB8f482539F2d3Ae2C9ea6076894df36D1f632775",
+        "proposal_calldata" : ""
     }
 }
