--- a/proposals/config.json
+++ b/proposals/config.json
@@ -5,18 +5,15 @@
         "proposerAddress" : "",
         "voterAddress" : ""
     },
-    "indexOTC" : {
-        "deploy" : false,
-        "validate" : true,
-        "exec" : true,
-        "proposerAddress" : "0xe0ac4559739bD36f0913FB0A3f5bFC19BCBaCD52",
-        "voterAddress" : "0xB8f482539F2d3Ae2C9ea6076894df36D1f632775",
-        "proposal_calldata" : ""
-    },
-    "fip_10a" : {
+    "aavePcvDeposit" : {
         "deploy" : true,
         "validate" : false,
-        "exec" : false,
+        "exec" : false
+    },
+    "fip_10a" : {
+        "deploy" : false,
+        "validate" : false,
+        "exec" : true,
         "proposerAddress" : "0x6ef71ca9cd708883e129559f5edbfb9d9d5c6148",
         "voterAddress" : "0xB8f482539F2d3Ae2C9ea6076894df36D1f632775",
         "proposal_calldata" : ""
