--- a/end-to-end/proposals_config.json
+++ b/end-to-end/proposals_config.json
@@ -5,7 +5,7 @@
         "proposerAddress" : "",
         "voterAddress" : ""
     },
-    "aavePcvDeposit" : {
+    "aavePCVDeposit" : {
         "deploy" : true,
         "exec" : false
     },
