add deployed addresses

--- a/end-to-end/proposals_config.json
+++ b/end-to-end/proposals_config.json
@@ -10,7 +10,7 @@
         "exec" : false
     },
     "fip_13b" : {
-        "deploy" : true,
+        "deploy" : false,
         "exec" : false,
         "proposerAddress" : "",
         "voterAddress" : ""
