--- a/proposals/config.json
+++ b/proposals/config.json
@@ -19,5 +19,12 @@
         "totalValue" : 60000000000000000,
         "proposerAddress" : "0xe0ac4559739bD36f0913FB0A3f5bFC19BCBaCD52",
         "voterAddress" : "0xB8f482539F2d3Ae2C9ea6076894df36D1f632775"
+    },
+    "fip_15" : {
+        "deploy" : true,
+        "exec" : false,
+        "proposal_calldata" : "",
+        "proposerAddress" : "0xe0ac4559739bD36f0913FB0A3f5bFC19BCBaCD52",
+        "voterAddress" : "0xB8f482539F2d3Ae2C9ea6076894df36D1f632775"
     }
 }
