--- a/end-to-end/proposals_config.json
+++ b/end-to-end/proposals_config.json
@@ -6,7 +6,7 @@
         "voterAddress" : ""
     },
     "fip_20" : {
-        "deploy" : true,
+        "deploy" : false,
         "exec" : false,
         "proposerAddress" : "",
         "voterAddress" : ""
