--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "author": "joeysantoro",
   "license": "AGPL-3.0-only",
   "dependencies": {
+    "@balancer-labs/v2-pool-weighted": "^1.0.0",
     "@chainlink/contracts": "^0.1.7",
     "@ethersproject/strings": "^5.4.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
