--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "hardhat": "^2.6.0",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-typechain": "^0.3.5",
-    "solidity-coverage": "^0.7.16"
+    "hardhat-typechain": "^0.3.5"
   },
   "devDependencies": {
     "@idle-finance/hardhat-proposals-plugin": "^0.2.3",
@@ -62,6 +61,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.2.0",
     "mocha": "^7.0.0",
+    "solidity-coverage": "^0.7.17",
     "ts-node": "^10.0.0",
     "typechain": "^5.0.0",
     "typescript": "^4.3.2",
