--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-import": "^2.23.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.2.0",
+    "hardhat-web3": "^1.0.1",
     "mocha": "^7.0.0",
     "ts-node": "^10.0.0",
     "typechain": "^5.0.0",
