--- a/end-to-end/proposals_config.json
+++ b/end-to-end/proposals_config.json
@@ -1,4 +1,9 @@
-{
+{   "upgrade" : {
+        "deploy" : true,
+        "exec" : false,
+        "proposerAddress" : "0xe0ac4559739bD36f0913FB0A3f5bFC19BCBaCD52",
+        "voterAddress" : "0xB8f482539F2d3Ae2C9ea6076894df36D1f632775"
+    },
     "fip_24": {
         "deploy": false,
         "exec": true,
