--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "lint": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js .",
     "lint:fix": "npm run lint --fix",
     "size-contracts": "npx hardhat size-contracts",
-    "deploy:localhost": "npx hardhat run --network localhost deploy/migrations.js",
-    "deploy:main": "npx hardhat run --network mainnet deploy/migrations.js",
-    "deploy:ropsten": "npx hardhat run --network ropsten deploy/migrations.js",
-    "deploy:rinkeby": "npx hardhat run --network rinkeby deploy/migrations.js",
+    "deploy:localhost": "npx hardhat run --network localhost scripts/deploy/migrations.js",
+    "deploy:main": "npx hardhat run --network mainnet scripts/deploy/migrations.js",
+    "deploy:ropsten": "npx hardhat run --network ropsten scripts/deploy/migrations.js",
+    "deploy:rinkeby": "npx hardhat run --network rinkeby scripts/deploy/migrations.js",
     "abis": "node scripts/abis.js",
-    "calldata": "npx hardhat run proposals/utils/getProposalCalldata.js",
-    "check-proposal": "npx hardhat run proposals/utils/checkProposal.js"
+    "calldata": "npx hardhat run scripts/utils/getProposalCalldata.js",
+    "check-proposal": "npx hardhat run scripts/utils/checkProposal.js"
   },
   "author": "joeysantoro",
   "license": "AGPL-3.0-only",
