--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@balancer-labs/v2-pool-weighted": "^1.0.0",
     "@chainlink/contracts": "^0.1.7",
     "@ethersproject/strings": "^5.4.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
@@ -52,6 +51,7 @@
   },
   "devDependencies": {
     "@idle-finance/hardhat-proposals-plugin": "^0.2.3",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
     "@typechain/hardhat": "^2.0.2",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
@@ -61,7 +61,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.2.0",
+    "ethers": "^5.4.7",
     "hardhat-web3": "^1.0.1",
     "mocha": "^7.0.0",
     "solidity-coverage": "^0.7.17",
