--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "npx hardhat test",
     "test:e2e": "RUN_E2E_TESTS=true npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
-    "lint": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore --ext .js .",
+    "lint": "eslint --config ./.eslintrc.js --ignore-path ./.eslintignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "npm run lint --fix",
     "size-contracts": "npx hardhat size-contracts",
     "deploy:localhost": "npx hardhat run --network localhost scripts/deploy/migrations.js",
@@ -24,7 +24,8 @@
     "deploy:rinkeby": "npx hardhat run --network rinkeby scripts/deploy/migrations.js",
     "abis": "node scripts/abis.js",
     "calldata": "npx hardhat run scripts/utils/getProposalCalldata.ts",
-    "check-proposal": "npx hardhat run scripts/utils/checkProposal.ts"
+    "check-proposal": "npx hardhat run scripts/utils/checkProposal.ts",
+    "prettier-format": "prettier --config .prettierrc './**/*.ts' --write"
   },
   "author": "joeysantoro",
   "license": "AGPL-3.0-only",
@@ -58,18 +59,23 @@
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.2",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "chai-bn": "^0.2.1",
-    "eslint": "^7.27.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.4.7",
     "hardhat-web3": "^1.0.1",
     "mocha": "^7.0.0",
+    "prettier": "^2.4.1",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.0.0",
     "typechain": "^5.0.0",
-    "typescript": "^4.3.2",
+    "typescript": "^4.4.3",
     "web3": "^1.3.6"
   }
 }
