--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "npx hardhat test",
     "test:e2e": "RUN_E2E_TESTS=true npx hardhat test",
     "test:gas": "REPORT_GAS=true npx hardhat test",
-    "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .js,.jsx,.ts,.tsx .",
+    "lint": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
+    "lint-all": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "npm run lint --fix",
     "size-contracts": "npx hardhat size-contracts",
     "deploy:localhost": "npx hardhat run --network localhost scripts/deploy/migrations.js",
