--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@balancer-labs/v2-pool-weighted": "^1.0.0",
     "@chainlink/contracts": "^0.1.7",
     "@ethersproject/strings": "^5.4.0",
-    "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.3.2",
@@ -49,14 +48,13 @@
     "fullname": "^4.0.1",
     "hardhat": "^2.6.0",
     "hardhat-contract-sizer": "^2.0.3",
-    "hardhat-gas-reporter": "^1.0.4",
-    "hardhat-typechain": "^0.3.5",
-    "username": "^6.0.0"
+    "hardhat-gas-reporter": "^1.0.4"
   },
   "devDependencies": {
     "@idle-finance/hardhat-proposals-plugin": "^0.2.3",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.10",
-    "@typechain/hardhat": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@typechain/ethers-v5": "^7.1.2",
+    "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.18",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.2",
@@ -75,7 +73,7 @@
     "prettier": "^2.4.1",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.0.0",
-    "typechain": "^5.0.0",
+    "typechain": "^5.1.2",
     "typescript": "^4.4.3",
     "web3": "^1.3.6"
   }
