--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "test/*", "test/**/*",
     "scripts/*", "scripts/**/*",
     "proposals/*", "proposals/**/*",
-    "./typechain"
+    "./types/contracts/*", "./types/contracts/**/*",
   ],
   "files": ["./hardhat.config.ts"]
 }
