remove web3 and move old stuff to old folders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,9 @@
     "proposals/*", "proposals/**/*",
     "./types/contracts/*", "./types/contracts/**/*",
   ],
+  "exclude": [
+    "scripts/deploy/old/*",
+    "proposals/dao/old/*"
+  ],
   "files": ["./hardhat.config.ts"],
 }
