--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "lint-all": "eslint --config ./.eslintrc --ignore-path ./.eslintignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "eslint --fix --config ./.eslintrc --ignore-path ./.eslintignore --ext .ts,.tsx .",
     "size-contracts": "npx hardhat size-contracts",
-    "deploy:localhost": "npx hardhat run --network localhost scripts/deploy/migrations.js",
-    "deploy:main": "npx hardhat run --network mainnet scripts/deploy/migrations.js",
-    "deploy:fuse": "DEPLOY_FILE=compoundPCVDeposit npx hardhat run --network mainnet scripts/deploy/migrations.js",
-    "deploy:ropsten": "npx hardhat run --network ropsten scripts/deploy/migrations.js",
-    "deploy:rinkeby": "npx hardhat run --network rinkeby scripts/deploy/migrations.js",
+    "deploy:localhost": "npx hardhat run --network localhost scripts/deploy/migrations.ts",
+    "deploy:main": "npx hardhat run --network mainnet scripts/deploy/migrations.ts",
+    "deploy:fip": "IS_FIP=true npm run deploy:main",
+    "deploy:fuse": "DEPLOY_FILE=compoundPCVDeposit npx hardhat run --network mainnet scripts/deploy/migrations.ts",
+    "deploy:ropsten": "npx hardhat run --network ropsten scripts/deploy/migrations.ts",
+    "deploy:rinkeby": "npx hardhat run --network rinkeby scripts/deploy/migrations.ts",
     "abis": "node scripts/abis.js",
     "calldata": "npx hardhat run scripts/utils/getProposalCalldata.ts",
     "check-proposal": "ENABLE_MAINNET_FORKING=true npx hardhat run scripts/utils/checkProposal.ts",
