--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
     working_directory: ~/repo
     docker:
       - image: circleci/node:14
+    parallelism: 4
     resource_class: xlarge
     steps:
       - restore_cache:
@@ -53,7 +54,9 @@ jobs:
             - repo-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Run tests
-          command: npm run test
+          command: |
+            circleci tests glob "test/unit/**/*.ts" | circleci tests split > /tmp/tests-to-run
+            npm run test $(cat /tmp/tests-to-run)
 
   e2e-test:
     working_directory: ~/repo
