--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
     working_directory: ~/repo
     docker:
       - image: circleci/node:14
-    parallelism: 8
+    parallelism: 32
     resource_class: xlarge
     steps:
       - restore_cache:
@@ -55,7 +55,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            circleci tests glob "test/unit/**/*.ts" | circleci tests split --split-by=timings > /tmp/tests-to-run
+            circleci tests glob "test/unit/**/*.ts" | circleci tests split > /tmp/tests-to-run
             npm run test $(cat /tmp/tests-to-run)
       - store_test_results:
           path: /tmp/test-reports
