also split e2e tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ jobs:
     working_directory: ~/repo
     docker:
       - image: circleci/node:14
+    parallelism: 5
     resource_class: xlarge
     steps:
       - restore_cache:
@@ -69,7 +70,9 @@ jobs:
             - repo-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Run end-to-end tests
-          command: npm run test:e2e
+          command: |
+            circleci tests glob "test/e2e/**/*.ts" | circleci tests split --split-by=filesize > /tmp/tests-to-run
+            npm run test:e2e $(cat /tmp/tests-to-run)
 
 workflows:
   main:
