--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@uniswap/lib": "^1.1.2",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@uniswap/v3-core": "^1.0.0",
+    "@uniswap/v3-periphery": "^1.3.0",
     "chai": "^4.3.4",
     "dotenv": "^8.2.0",
     "hardhat": "^2.6.0",
