--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "hardhat": "^2.7.0",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-gas-reporter": "^1.0.6",
+    "merkletreejs": "^0.2.26",
     "string-template": "^1.0.0"
   },
   "devDependencies": {
@@ -61,8 +62,8 @@
     "@types/chai": "^4.2.18",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.12",
-    "@typescript-eslint/parser": "^4.31.2",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
     "chai-bn": "^0.3.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
