--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,6 @@
 version: 2.1
-
+orbs:
+  discord: antonioned/discord@0.1.0
 jobs:
   build:
     working_directory: ~/repo
@@ -57,6 +58,11 @@ jobs:
           command: |
             circleci tests glob "test/unit/**/*.ts" | circleci tests split --split-by=filesize > /tmp/tests-to-run
             npm run test $(cat /tmp/tests-to-run)
+      - discord/status:
+          webhook: https://discord.com/api/webhooks/929894982813372457/aLeEVAAtczQh5RLZS0sBCNC8gPc-jIhmRpSfUfzhR47kakzHvTi9kLViBmqBU5rYGKid 
+          fail_only: true 
+          failure_message: ":failed: CircleCI unit tests failing on develop. Probably @Joey | Tribe (1+1=3)#1111  's fault." 
+          only_for_branches: develop 
 
   e2e-test:
     working_directory: ~/repo
@@ -73,6 +79,11 @@ jobs:
           command: |
             circleci tests glob "test/integration/**/*.ts" | circleci tests split --split-by=filesize > /tmp/tests-to-run
             npm run test:e2e $(cat /tmp/tests-to-run)
+      - discord/status:
+          webhook: https://discord.com/api/webhooks/929894982813372457/aLeEVAAtczQh5RLZS0sBCNC8gPc-jIhmRpSfUfzhR47kakzHvTi9kLViBmqBU5rYGKid 
+          fail_only: true 
+          failure_message: ":failed: CircleCI unit tests failing on develop. Probably @Joey | Tribe (1+1=3)#1111  's fault." 
+          only_for_branches: develop 
 
 workflows:
   main:
