--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,11 @@ jobs:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/repo
+      - discord/status:
+          webhook: https://discord.com/api/webhooks/929894982813372457/aLeEVAAtczQh5RLZS0sBCNC8gPc-jIhmRpSfUfzhR47kakzHvTi9kLViBmqBU5rYGKid 
+          fail_only: true 
+          failure_message: ":failed: CircleCI BUILD failed. Probably @Joey | Tribe (1+1=3)#1111  's fault." 
+          only_for_branches: develop 
   lint:
     working_directory: ~/repo
     docker:
@@ -82,7 +87,7 @@ jobs:
       - discord/status:
           webhook: https://discord.com/api/webhooks/929894982813372457/aLeEVAAtczQh5RLZS0sBCNC8gPc-jIhmRpSfUfzhR47kakzHvTi9kLViBmqBU5rYGKid 
           fail_only: true 
-          failure_message: ":failed: CircleCI unit tests failing on develop. Probably @Joey | Tribe (1+1=3)#1111  's fault." 
+          failure_message: ":failed: CircleCI e2e tests failing on develop. Probably @Joey | Tribe (1+1=3)#1111  's fault." 
           only_for_branches: develop 
 
 workflows:
