--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.4",
     "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
+    "mocha-multi-reporters": "^1.5.1",
     "prettier": "^2.5.1",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
