use hash for parallel fix

--- a/mocha-reporter-config.json
+++ b/mocha-reporter-config.json
@@ -1,6 +1,7 @@
 {
     "reporterEnabled": "spec, mocha-junit-reporter",
     "mochaJunitReporterOptions": {
+        "mochaFile": "test-results.[hash].xml",
         "testsuitesTitle": true,
         "suiteTitleSeparatedBy": "."
     }
