--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - discord/status:
           webhook: https://discord.com/api/webhooks/929894982813372457/aLeEVAAtczQh5RLZS0sBCNC8gPc-jIhmRpSfUfzhR47kakzHvTi9kLViBmqBU5rYGKid 
           fail_only: true 
-          failure_message: ":failed: CircleCI BUILD failed. Probably @Joey | Tribe (1+1=3)#1111  's fault." 
+          failure_message: ":failed: CircleCI BUILD failed." 
           only_for_branches: develop 
   lint:
     working_directory: ~/repo
@@ -64,12 +64,12 @@ jobs:
             circleci tests glob "test/unit/**/*.ts" | circleci tests split --split-by=filesize > /tmp/tests-to-run
             npm run test $(cat /tmp/tests-to-run)
       - store_test_results:
-            path: test-results.xml
+            path: test-results
 
       - discord/status:
           webhook: https://discord.com/api/webhooks/929894982813372457/aLeEVAAtczQh5RLZS0sBCNC8gPc-jIhmRpSfUfzhR47kakzHvTi9kLViBmqBU5rYGKid 
           fail_only: true 
-          failure_message: ":failed: CircleCI unit tests failing on develop. Probably @Joey | Tribe (1+1=3)#1111  's fault." 
+          failure_message: ":failed: CircleCI unit tests failing on develop." 
           only_for_branches: develop 
 
   e2e-test:
@@ -87,10 +87,12 @@ jobs:
           command: |
             circleci tests glob "test/integration/**/*.ts" | circleci tests split --split-by=filesize > /tmp/tests-to-run
             npm run test:e2e $(cat /tmp/tests-to-run)
+      - store_test_results:
+            path: test-results
       - discord/status:
           webhook: https://discord.com/api/webhooks/929894982813372457/aLeEVAAtczQh5RLZS0sBCNC8gPc-jIhmRpSfUfzhR47kakzHvTi9kLViBmqBU5rYGKid 
           fail_only: true 
-          failure_message: ":failed: CircleCI e2e tests failing on develop. Probably @Joey | Tribe (1+1=3)#1111  's fault." 
+          failure_message: ":failed: CircleCI e2e tests failing on develop." 
           only_for_branches: develop 
 
 workflows:
