--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "files": [],
   "scripts": {
     "compile": "npx hardhat compile",
-    "coverage": "scripts/coverage.js",
-    "coverage:hardhat": "npx hardhat coverage",
+    "coverage": "npx hardhat coverage",
     "console": "npx hardhat console",
     "console:rinkeby": "npx hardhat console --network rinkeby",
     "console:ropsten": "npx hardhat console --network ropsten",
@@ -27,9 +26,7 @@
     "deploy:fuse": "DEPLOY_FILE=compoundPCVDeposit npx hardhat run --network mainnet scripts/deploy/migrations.ts",
     "deploy:timelock": "DEPLOY_FILE=optimisticTimelockDeploy npx hardhat run --network mainnet scripts/deploy/migrations.ts",
     "deploy:stw": "DEPLOY_FILE=deployStakedTokenWrapper npx hardhat run --network mainnet scripts/deploy/migrations.ts",
-    "deploy:ropsten": "npx hardhat run --network ropsten scripts/deploy/migrations.ts",
-    "deploy:rinkeby": "npx hardhat run --network rinkeby scripts/deploy/migrations.ts",
-    "abis": "node scripts/abis.js",
+    "abis": "node scripts/utils/abis.js",
     "calldata": "npx hardhat run scripts/utils/getProposalCalldata.ts",
     "check-proposal": "ENABLE_MAINNET_FORKING=true npx hardhat run scripts/utils/checkProposal.ts",
     "prettier-format": "prettier --config .prettierrc './**/*.ts' --write",
